# LartosM-Qt

./: .Arena_SDK_ARM64.conf.swp  .mainwindow.cpp.swp  Arena_SDK_ARM64.conf  BtnControllerEvManager.cpp  BtnControllerEvManager.h  BtnHeadEvManager.cpp  BtnHeadEvManager.h  Icons.qrc  LartosPointObj  LartosPointObj.cpp  LartosPointObj.h  LartosQT.fc0f7ba  LartosQT.pro  LartosQT.pro.orig  LartosQT.pro.save  LartosQT.pro.user.22  LartosQT.pro.user.4.8-pre1  LartosQT.pro.user.9da7643  LartosQT.pro.user.9da7643.4.8-pre1  LartosQT.pro.user.a8bb6bc  LartosQT.pro.user.a8bb6bc.22  LartosQT.pro.user.a8bb6bc.4.8-pre1  LartosQT.pro.user.ae81828  LartosQT.pro.user.ae81828.22  LartosQT.pro.user.fc0f7ba  LartosQT.pro.user.fc0f7ba.22  LartosQT.pro.user.orig  LinuxPlayM4.h  MatToQImage.cpp  MatToQImage.h  PlayM4.h  SaveLartosPoints.cpp  SaveLartosPoints.h  SaveLartosUserData.cpp  SaveLartosUserData.h  SaveLartosUserData.h.tV1461  TrUnivw.cpp  TrUnivw.h  WindowsPlayM4.h  bg.h  (+78 more)
Application/: CompassCalibration.c  CompassCalibration.h  CompassCalibration_PTU.c  CompassCalibration_PTU.h  GPSFormatter.c  GPSFormatter.h  SharedVariables.c  SharedVariables.h
Configuration/: ReadConfig.c  ReadConfig.h
General/: CHARString.cpp  CHARString.h  GlobalVariables.cpp  GlobalVariables.h
Hik/: CaptureThread.cpp  CaptureThread.h  Controller.cpp  Controller.h  HCNetSDK.h  ImageBuffer.cpp  ImageBuffer.h  ProcessingThread.cpp  ProcessingThread.h  global.cpp  global.h  hikvision.cpp  hikvision.cpp.autosave  hikvision.h
Linux/: Config.json  GpioUdpSock.sh  HikCurlWrap.sh  LartosMG.sh  LartosUserSettings.json  add_services.sh  buildLartosMG.sh  init_services.sh  network_config.sh  startup_gpios.service  (+2 more)
TransLib/: CMakeLists.txt  PointCoo.cpp  PointCoo.h  TrUnivw.cpp  TrUnivw.h  TransHelper.cpp  TransHelper.h  albers.cpp  albers.h  azeq.cpp  azeq.h  bng.cpp  bng.h  bonne.cpp  bonne.h  cassini.cpp  cassini.h  cyleqa.cpp  cyleqa.h  eckert4.cpp  eckert4.h  eckert6.cpp  eckert6.h  eqdcyl.cpp  eqdcyl.h  geocent.cpp  geocent.h  geodw.cpp  geodw.h  geoid.cpp  geoid.h  georef.cpp  georef.h  gnomonic.cpp  gnomonic.h  grinten.cpp  grinten.h  lambert.cpp  lambert.h  loccart.cpp  (+39 more)
(+157 files in other folders)
